# naver-cafe-monitor

./: .dockerignore  .env.enc  .env.example  .gitignore  .sops.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.context/retros/: 2026-04-13-1.json
.github/workflows/: ci.yml  deploy.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/src/: __init__.py  main.py
api/src/auth/: cookies.py  csrf.py  dependencies.py  google_oauth.py  login_service.py  router.py  settings_2fa.py  signup_service.py  token_service.py
api/tests/: conftest.py  test_api.py  test_auth_login.py  test_auth_me_logout.py  test_auth_pubkey.py  test_auth_refresh.py  test_auth_signup.py  test_cookies.py  test_csrf.py  test_google_oauth.py  test_login_domain_branch.py  test_posts_auth_gate.py  test_settings_2fa.py  test_setup_required_guard.py
batch/: .dockerignore  Dockerfile  conftest.py
batch/config/: config.example.yaml
batch/scripts/: install_cron.sh  kakao_setup.py  start.sh
batch/src/: __main__.py  batch.py  config.py  kakao_refresh.py
batch/tests/: test_batch_alert.py  test_config.py  test_database.py  test_default_paths.py  test_face.py  test_image_downloader.py  test_install_cron.sh  test_kakao_auth.py  test_kakao_auth_lock.py  test_kakao_format.py  test_kakao_refresh.py  test_kakao_setup.py  test_migrate_last_seen.py  test_monorepo_structure.py  test_notice_google_photos_removed.py  test_post_repository.py  test_post_tracker.py  test_scheduler.py
config/: config.example.yaml
db/: ddl.sql  migrate_last_seen.py
db/tests/: test_auth_schema.py
deploy/: .env.example  compose.bluegreen.yaml  docker-compose.yaml
docs/: docker-bluegreen.md  harness-todo.md  product-todo.md  tasks-auth.md  tasks.md
scripts/: install_cron.sh  kakao_setup.py  start.sh
shared/: __init__.py  auth_events.py  auth_tokens.py  crypto.py  database.py  host_classifier.py  kakao_format.py  post_repository.py  rate_limit.py  refresh_token_repository.py  user_repository.py
src/: __main__.py  batch.py  config.py
tests/: test_config.py  test_crawler.py  test_face.py  test_messaging.py  test_notice.py  test_scheduler.py
web/: Dockerfile  astro.config.mjs  package-lock.json  package.json  playwright.config.ts
(+158 files in other folders)
