[project]
name = "naver-cafe-monitor-workspace"
version = "0.1.0"
description = "Naver Cafe Monitor — monorepo workspace (batch / api / web)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["batch/tests", "api/tests", "shared/tests", "scripts/auth/tests", "scripts/deploy/tests", "db/tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
