[project]
name = "naver-cafe-monitor-api"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.27",
    "pymysql>=1.1",
    "python-dotenv>=1.0",
    "cryptography>=42",
    "argon2-cffi>=23",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
